update clear cache script + add it to pkg json

--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
   "license": "GPL-3.0-or-later",
   "author": "Aviv Lo",
   "scripts": {
-    "build": "webpack --mode production",
+    "build": "./clear_cache.sh && webpack --mode production",
     "build:dev": "webpack --mode development",
     "dev-server": "webpack serve --mode development",
     "lint": "office-addin-lint check",
     "lint:fix": "office-addin-lint fix",
     "prettier": "office-addin-lint prettier",
-    "start": "npm run build & office-addin-debugging start manifest.xml",
-    "start:desktop": "office-addin-debugging start manifest.xml desktop",
+    "start": "./clear_cache.sh && npm run build & office-addin-debugging start manifest.xml",
+    "start:desktop": "./clear_cache.sh && office-addin-debugging start manifest.xml desktop",
     "start:web": "office-addin-debugging start manifest.xml web",
     "stop": "office-addin-debugging stop manifest.xml",
     "validate": "office-addin-manifest validate manifest.xml",
