--- a/package.json
+++ b/package.json
@@ -8,18 +8,15 @@
   "license": "GPL-3.0-or-later",
   "author": "Aviv Lo",
   "scripts": {
-    "build": "./clear_cache.sh && webpack --mode production",
-    "build:win": " webpack --mode production",
-    "reload": "office-addin-debugging stop manifest.xml && ./clear_cache.sh && webpack --mode production && office-addin-debugging start manifest.xml --debug-method direct",
-    "reload:win": "office-addin-debugging stop manifest.xml && webpack --mode production && office-addin-debugging start manifest.xml desktop ",
+    "build": "webpack --mode production",
+    "reload": "npm run stop && ./clear_cache.sh && npm run start",
     "build:dev": "webpack --mode development",
     "dev-server": "webpack serve --mode development",
     "lint": "office-addin-lint check",
     "lint:fix": "office-addin-lint fix",
     "prettier": "office-addin-lint prettier",
-    "start": "npm run build & office-addin-debugging start manifest.xml --debug-method direct",
+    "start": "office-addin-debugging start manifest.xml --debug-method direct",
     "start:desktop": "./clear_cache.sh && office-addin-debugging start manifest.xml desktop",
-    "start:windesk": "office-addin-debugging start manifest.xml desktop",
     "start:web": "office-addin-debugging start manifest.xml web",
     "stop": "office-addin-debugging stop manifest.xml",
     "validate": "office-addin-manifest validate manifest.xml",
