--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "lint": "office-addin-lint check",
     "lint:fix": "office-addin-lint fix",
     "prettier": "office-addin-lint prettier",
-    "start": "office-addin-debugging start manifest.xml --debug-method direct",
+    "start": "npm run build && office-addin-debugging start manifest.xml --debug-method direct",
     "start:desktop": "./clear_cache.sh && office-addin-debugging start manifest.xml desktop",
     "start:web": "office-addin-debugging start manifest.xml web",
     "stop": "office-addin-debugging stop manifest.xml",
